# python_trade_analyzer

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
scripts/: update_dependencies.py
src/: trade_analyzer.py
src/trade_analyzer/: __init__.py  analyzer.py  cli.py  config.py  models.py  reader.py  utils.py  writer.py
tests/: test_models.py  test_utils.py
